--- a/UPImage/ImagePreferencesViewController.xib
+++ b/UPImage/ImagePreferencesViewController.xib
@@ -106,7 +106,7 @@
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NvL-nQ-2Dg">
-                    <rect key="frame" x="134" y="88" width="94" height="32"/>
+                    <rect key="frame" x="52" y="88" width="94" height="32"/>
                     <buttonCell key="cell" type="push" title="验证配置" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="Bip-WS-tbq">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -123,16 +123,6 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button hidden="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sDc-Ui-cx9">
-                    <rect key="frame" x="216" y="88" width="94" height="32"/>
-                    <buttonCell key="cell" type="push" title="使用默认" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="SOn-Nb-evr">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="setDefault:" target="-2" id="Dk6-AT-qOl"/>
-                    </connections>
-                </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ia4-2v-PGs">
                     <rect key="frame" x="106" y="170" width="182" height="14"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="提示：URL前缀格式为  http://域名/" id="jaw-3R-NxV">
@@ -180,13 +170,33 @@
                         </menu>
                     </popUpButtonCell>
                 </popUpButton>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MKk-gx-G56">
+                    <rect key="frame" x="216" y="88" width="94" height="32"/>
+                    <buttonCell key="cell" type="push" title="重置输入" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="miZ-ao-cgi">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" size="13" name=".PingFangSC-Regular"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="resetInput:" target="-2" id="z7G-Ae-J4U"/>
+                    </connections>
+                </button>
+                <button hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sDc-Ui-cx9">
+                    <rect key="frame" x="274" y="-7" width="94" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="push" title="使用默认" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="SOn-Nb-evr">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="setDefault:" target="-2" id="Dk6-AT-qOl"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
-                <constraint firstItem="sDc-Ui-cx9" firstAttribute="top" secondItem="NvL-nQ-2Dg" secondAttribute="top" id="02h-MU-Z6p"/>
                 <constraint firstItem="Ia4-2v-PGs" firstAttribute="top" secondItem="9QQ-vX-btJ" secondAttribute="bottom" constant="5" id="412-lb-l05"/>
                 <constraint firstAttribute="trailing" secondItem="d0M-S8-UXU" secondAttribute="trailing" constant="40" id="45U-mG-dIT"/>
                 <constraint firstItem="zgK-jM-epN" firstAttribute="top" secondItem="lSv-x0-Xjm" secondAttribute="bottom" constant="30" id="6CO-Nz-0Jk"/>
-                <constraint firstItem="sDc-Ui-cx9" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" constant="82" id="6Xf-vX-xYd"/>
+                <constraint firstItem="MKk-gx-G56" firstAttribute="top" secondItem="NvL-nQ-2Dg" secondAttribute="top" id="6h1-Aw-3st"/>
                 <constraint firstItem="zgK-jM-epN" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="7uO-ja-RDu"/>
                 <constraint firstItem="c7a-xx-UQA" firstAttribute="top" secondItem="d0M-S8-UXU" secondAttribute="bottom" constant="30" id="8B6-ND-IRs"/>
                 <constraint firstItem="TzW-n7-wGg" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="AUa-O6-fWe"/>
@@ -205,6 +215,7 @@
                 <constraint firstItem="d0M-S8-UXU" firstAttribute="centerY" secondItem="spj-8n-oHx" secondAttribute="centerY" id="YzG-Wd-0nk"/>
                 <constraint firstItem="c7a-xx-UQA" firstAttribute="trailing" secondItem="d0M-S8-UXU" secondAttribute="trailing" id="aoQ-0n-DlO"/>
                 <constraint firstItem="82X-yH-ivu" firstAttribute="top" secondItem="W3O-c8-fDc" secondAttribute="bottom" constant="34" id="bVb-qW-t9u"/>
+                <constraint firstItem="MKk-gx-G56" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" constant="82" id="eLx-m1-fhI"/>
                 <constraint firstItem="82X-yH-ivu" firstAttribute="centerY" secondItem="Tfv-O9-NT9" secondAttribute="centerY" constant="-2.5" id="fJZ-93-NQV"/>
                 <constraint firstItem="9QQ-vX-btJ" firstAttribute="leading" secondItem="c7a-xx-UQA" secondAttribute="leading" id="gDz-H4-nV8"/>
                 <constraint firstItem="W3O-c8-fDc" firstAttribute="leading" secondItem="vOc-On-5ul" secondAttribute="leading" id="imR-kb-eF0"/>
@@ -213,7 +224,7 @@
                 <constraint firstItem="Tfv-O9-NT9" firstAttribute="height" secondItem="9QQ-vX-btJ" secondAttribute="height" id="pf6-zf-uSj"/>
                 <constraint firstAttribute="trailing" secondItem="rjs-X7-kUH" secondAttribute="trailing" constant="40" id="qqu-0p-AZ5"/>
                 <constraint firstItem="Ia4-2v-PGs" firstAttribute="leading" secondItem="9QQ-vX-btJ" secondAttribute="leading" id="sXD-AQ-DL5"/>
-                <constraint firstItem="NvL-nQ-2Dg" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="uU2-82-vSF"/>
+                <constraint firstItem="NvL-nQ-2Dg" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" constant="-82" id="uU2-82-vSF"/>
                 <constraint firstItem="Tfv-O9-NT9" firstAttribute="width" secondItem="9QQ-vX-btJ" secondAttribute="width" id="vvI-oi-pPN"/>
                 <constraint firstItem="vOc-On-5ul" firstAttribute="leading" secondItem="spj-8n-oHx" secondAttribute="leading" id="wRK-dh-enN"/>
                 <constraint firstItem="c7a-xx-UQA" firstAttribute="centerY" secondItem="vOc-On-5ul" secondAttribute="centerY" id="wfZ-x1-Cq3"/>
